# hellthrower

./: .gitignore  App.xaml  App.xaml.cs  Hellthrower.sln  HellthrowerWPF.csproj  HellthrowerWPF.sln  MainWindow.xaml  MainWindow.xaml.cs  configuration.json  go.mod  go.sum  index.html  main.go  package-lock.json  package.json  requirements_ubuntu
.erb/dll/: main.bundle.dev.js  preload.bundle.dev.js  preload.js  renderer.dev.dll.js  renderer.json
Converters/: KeyToReadable.cs
Extensions/: Utilities.cs
Hellthrower/: App.xaml  App.xaml.cs  Hellthrower.csproj  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  app.manifest
Hellthrower/Components/: CustomNavigationViewItem.cs
Hellthrower/Converters/: ButtonTriggerConverter.cs  StratagemEnumToText.cs
Hellthrower/Extensions/: FunctionalExtentions.cs  ListExtensions.cs
Hellthrower/Models/: ConfigModel.cs  EStratagem.cs  Loadout.cs  (+2 more)
Models/: ConfigModel.cs  ESnackType.cs  EStratagem.cs
Pages/: ActivatePage.xaml  ActivatePage.xaml.cs  CreatePage.xaml  CreatePage.xaml.cs  LoadoutPage.xaml  LoadoutPage.xaml.cs
Services/: AppConstructor.cs  ConfigService.cs  IAppConstructor.cs  IConfigService.cs  IKeyHooker.cs  ILoadoutPageResolver.cs  ISnackController.cs  ISnackNotifier.cs  KeyHooker.cs  KeyboardInput.cs  LoadoutPageResolver.cs  SnackController.cs  SnackNotifier.cs
config/: config.go
eventprocessor/: eventpropagator.go
scraper/: download_links.sh  scraper.py  stratagems.json
src/: App.tsx  main.tsx  stratagems.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
(+53 files in other folders)
