[package]
name = "hellthrower"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hellthrower_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
klib = { path = "/home/madsbyriel/code/klib" }
helldivers_common = { path = "/home/madsbyriel/code/hellthrower_common" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
evdev = "0.13.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"

